--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h1>Lambda blog</h1>
   </span>
 
-  <a id="click" href="https://github.com/SonGuku" target="_blank"><img class="info-avatar" src="images/8.jpg"></a>
+  <a id="click" href="https://www.wenzixunblog.com/code" target="_blank"><img class="info-avatar" src="images/8.jpg"></a>
 
   <section class="info-container">
   <div class="info-content">
@@ -48,7 +48,7 @@
       <a class="info-icon extra" href="https://github.com/SonGuku" target="_blank"><i class="fa fa-github-alt"></i></a>
       <a class="info-icon extra" href="http://music.163.com/#/user/home?id=309073095" target="_blank"><i class="fa fa-music"></i></a>
       <div style="width: 98px; height: 98px; float: left; margin: 0 20px;"></div>
-      <a class="info-icon" href="http://www.wenzixunblog"><i class="fa fa-book"></i></a>
+      <a class="info-icon" href="http://www.wenzixunblog.com/pages"><i class="fa fa-book"></i></a>
       <a class="info-icon extra" href="http://weibo.com/2817209560" target="_blank"><i class="fa fa-weibo"></i></a>
     </div>
   </div>
